[#14757] Cleanup remoting package code
Signed-off-by: Pedro Ruivo <pruivo@redhat.com>